Fix analog clock scaling by setting canvas dimensions

--- a/MAIN.html
+++ b/MAIN.html
@@ -115,7 +115,7 @@
       <div class="prayer">Isha<br><small>09:45 PM</small></div>
     </div>
     <div class="clock">
-      <canvas id="analogClock"></canvas>
+      <canvas id="analogClock" width="180" height="180"></canvas>
     </div>
   </div>
 
