--- a/MAIN.html
+++ b/MAIN.html
@@ -1,179 +1,209 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Bayt al-Dhikr</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: url('https://cdn.jsdelivr.net/gh/creasions-cdn/images/kaaba-window-sunset.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px;
-    }
-    header {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    header h1 {
-      font-size: 2.5em;
-      color: #00ffcc;
-      margin: 0;
-    }
-    header p {
-      font-size: 1.2em;
-      color: #ccc;
-    }
-    .dashboard {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 100%;
-      max-width: 1200px;
-    }
-    .countdown {
-      width: 200px;
-      height: 200px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: rgba(0, 0, 0, 0.6);
-      border-radius: 50%;
-      font-size: 1.2em;
-      font-weight: bold;
-      text-align: center;
-    }
-    .time-block {
-      display: flex;
-      gap: 15px;
-      flex-grow: 1;
-      justify-content: center;
-      padding: 0 20px;
-    }
-    .prayer {
-      background: #111;
-      border-radius: 10px;
-      padding: 10px 20px;
-      text-align: center;
-      border: 2px solid #00ffcc;
-      min-width: 100px;
-    }
-    .prayer.active {
-      background: #00ffcc;
-      color: #000;
-    }
-    .clock {
-      width: 200px;
-      height: 200px;
-      background: rgba(0,0,0,0.6);
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .clock canvas {
-      width: 180px;
-      height: 180px;
-    }
-    .reminders {
-      margin-top: 30px;
-      width: 90%;
-      max-width: 800px;
-    }
-    .reminder {
-      background: #222;
-      margin: 10px 0;
-      padding: 15px 20px;
-      border-left: 5px solid #00ffcc;
-      border-radius: 6px;
-    }
-    footer {
-      margin-top: 40px;
-      font-size: 0.9em;
-      color: #ccc;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Bayt al-Dhikr</h1>
-    <p>McKinney, TX | White Masjid | 5 Dhul-Hijjah 1446 AH</p>
-  </header>
-
-  <div class="dashboard">
-    <div class="countdown" id="countdown">Next: Dhuhr in 00:36:00</div>
-    <div class="time-block">
-      <div class="prayer">Fajr<br><small>04:55 AM</small></div>
-      <div class="prayer active">Dhuhr<br><small>01:28 PM</small></div>
-      <div class="prayer">Asr<br><small>05:08 PM</small></div>
-      <div class="prayer">Maghrib<br><small>08:22 PM</small></div>
-      <div class="prayer">Isha<br><small>09:45 PM</small></div>
-    </div>
-    <div class="clock">
-      <canvas id="analogClock" width="180" height="180"></canvas>
-    </div>
-  </div>
-
-  <div class="reminders">
-    <div class="reminder">🕌 Dhuhr in 35 minutes — Revive the Sunnah of 4 rak‘aat before the Fard.</div>
-    <div class="reminder">📖 It's Friday — Don’t forget to recite Surah Al-Kahf before Maghrib.</div>
-    <div class="reminder">🤲 Arafah is in 4 days — Intend to fast and make du‘a preparation list.</div>
-  </div>
-
-  <footer>
-    Hadith of the Day: "The most beloved deeds to Allah are those done consistently, even if small."
-  </footer>
-
-  <script>
-    const canvas = document.getElementById("analogClock");
-    const ctx = canvas.getContext("2d");
-
-    function drawClock() {
-      const now = new Date();
-      const sec = now.getSeconds();
-      const min = now.getMinutes();
-      const hr = now.getHours();
-
-      ctx.clearRect(0, 0, 180, 180);
-      ctx.beginPath();
-      ctx.arc(90, 90, 88, 0, 2 * Math.PI);
-      ctx.fillStyle = "#000";
-      ctx.fill();
-      ctx.strokeStyle = "#00ffcc";
-      ctx.lineWidth = 4;
-      ctx.stroke();
-
-      ctx.beginPath();
-      ctx.moveTo(90, 90);
-      const hourAngle = ((Math.PI / 6) * hr) + ((Math.PI / 360) * min);
-      ctx.lineTo(90 + 40 * Math.cos(hourAngle - Math.PI / 2), 90 + 40 * Math.sin(hourAngle - Math.PI / 2));
-      ctx.strokeStyle = "#fff";
-      ctx.lineWidth = 6;
-      ctx.stroke();
-
-      ctx.beginPath();
-      ctx.moveTo(90, 90);
-      const minAngle = (Math.PI / 30) * min;
-      ctx.lineTo(90 + 60 * Math.cos(minAngle - Math.PI / 2), 90 + 60 * Math.sin(minAngle - Math.PI / 2));
-      ctx.lineWidth = 4;
-      ctx.stroke();
-
-      ctx.beginPath();
-      ctx.moveTo(90, 90);
-      const secAngle = (Math.PI / 30) * sec;
-      ctx.lineTo(90 + 70 * Math.cos(secAngle - Math.PI / 2), 90 + 70 * Math.sin(secAngle - Math.PI / 2));
-      ctx.strokeStyle = "#00ffcc";
-      ctx.lineWidth = 2;
-      ctx.stroke();
-    }
-
-    setInterval(drawClock, 1000);
-    drawClock();
-  </script>
-</body>
-</html>
+ (cd "$(git rev-parse --show-toplevel)" && git apply --3way <<'EOF' 
+diff --git a/MAIN.html b/MAIN.html
+index 2c42342ef21b4c75c226d8d0f03ce113bd0c701b..67825ac9d97806b4c11ac7524f8971fd71a9b86b 100644
+--- a/MAIN.html
++++ b/MAIN.html
+@@ -83,97 +83,190 @@
+     .reminders {
+       margin-top: 30px;
+       width: 90%;
+       max-width: 800px;
+     }
+     .reminder {
+       background: #222;
+       margin: 10px 0;
+       padding: 15px 20px;
+       border-left: 5px solid #00ffcc;
+       border-radius: 6px;
+     }
+     footer {
+       margin-top: 40px;
+       font-size: 0.9em;
+       color: #ccc;
+     }
+   </style>
+ </head>
+ <body>
+   <header>
+     <h1>Bayt al-Dhikr</h1>
+     <p>McKinney, TX | White Masjid | 5 Dhul-Hijjah 1446 AH</p>
+   </header>
+ 
+-  <div class="dashboard">
+-    <div class="countdown" id="countdown">Next: Dhuhr in 00:36:00</div>
+-    <div class="time-block">
+-      <div class="prayer">Fajr<br><small>04:55 AM</small></div>
+-      <div class="prayer active">Dhuhr<br><small>01:28 PM</small></div>
+-      <div class="prayer">Asr<br><small>05:08 PM</small></div>
+-      <div class="prayer">Maghrib<br><small>08:22 PM</small></div>
+-      <div class="prayer">Isha<br><small>09:45 PM</small></div>
++    <div class="dashboard">
++      <div class="countdown" id="countdown"></div>
++      <div class="time-block">
++      <div class="prayer"><span>Fajr</span><br><small></small></div>
++      <div class="prayer"><span>Dhuhr</span><br><small></small></div>
++      <div class="prayer"><span>Asr</span><br><small></small></div>
++      <div class="prayer"><span>Maghrib</span><br><small></small></div>
++      <div class="prayer"><span>Isha</span><br><small></small></div>
+     </div>
+     <div class="clock">
+-      <canvas id="analogClock"></canvas>
++      <canvas id="analogClock" width="180" height="180"></canvas>
+     </div>
+   </div>
+ 
+   <div class="reminders">
+     <div class="reminder">🕌 Dhuhr in 35 minutes — Revive the Sunnah of 4 rak‘aat before the Fard.</div>
+     <div class="reminder">📖 It's Friday — Don’t forget to recite Surah Al-Kahf before Maghrib.</div>
+     <div class="reminder">🤲 Arafah is in 4 days — Intend to fast and make du‘a preparation list.</div>
+   </div>
+ 
+   <footer>
+     Hadith of the Day: "The most beloved deeds to Allah are those done consistently, even if small."
+   </footer>
+ 
+   <script>
+     const canvas = document.getElementById("analogClock");
+     const ctx = canvas.getContext("2d");
+ 
++    const location = { lat: 33.1992, lng: -96.6989 };
++
++    function sunTimes(date, lat, lng) {
++      const rad = Math.PI / 180;
++      const dayMs = 86400000;
++      const J1970 = 2440588;
++      const J2000 = 2451545;
++      const toJulian = d => d.valueOf() / dayMs - 0.5 + J1970;
++      const fromJulian = j => new Date((j - J1970) * dayMs);
++      const toDays = d => toJulian(d) - J2000;
++
++      const lw = -lng * rad;
++      const phi = lat * rad;
++      const d = toDays(date);
++      const n = Math.round(d - lw / (2 * Math.PI));
++      const ds = n + lw / (2 * Math.PI);
++      const M = rad * (357.5291 + 0.98560028 * ds);
++      const C = rad * (1.9148 * Math.sin(M) + 0.02 * Math.sin(2 * M) + 0.0003 * Math.sin(3 * M));
++      const L = M + C + rad * 102.9372 + Math.PI;
++      const dec = Math.asin(Math.sin(L) * Math.sin(rad * 23.4397));
++      const Jnoon = J2000 + ds + 0.0053 * Math.sin(M) - 0.0069 * Math.sin(2 * L);
++      const w = Math.acos((Math.sin(rad * -0.83) - Math.sin(phi) * Math.sin(dec)) / (Math.cos(phi) * Math.cos(dec)));
++      const Jrise = Jnoon - w / (2 * Math.PI);
++      const Jset = Jnoon + w / (2 * Math.PI);
++      return {
++        sunrise: fromJulian(Jrise),
++        sunset: fromJulian(Jset),
++        noon: fromJulian(Jnoon)
++      };
++    }
++
++    function computePrayerTimes(date, lat, lng) {
++      const sun = sunTimes(date, lat, lng);
++      return {
++        fajr: new Date(sun.sunrise.getTime() - 90 * 60000),
++        dhuhr: sun.noon,
++        asr: new Date(sun.noon.getTime() + 4 * 3600000),
++        maghrib: sun.sunset,
++        isha: new Date(sun.sunset.getTime() + 90 * 60000)
++      };
++    }
++
++    function formatTime(d) {
++      return d.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
++    }
++
++    const times = computePrayerTimes(new Date(), location.lat, location.lng);
++    const prayers = [
++      { name: 'Fajr', time: times.fajr },
++      { name: 'Dhuhr', time: times.dhuhr },
++      { name: 'Asr', time: times.asr },
++      { name: 'Maghrib', time: times.maghrib },
++      { name: 'Isha', time: times.isha }
++    ];
++
++    const countdown = document.getElementById('countdown');
++    const prayerEls = document.querySelectorAll('.prayer');
++
++    prayers.forEach((p, i) => {
++      const timeEl = prayerEls[i].querySelector('small');
++      timeEl.textContent = formatTime(p.time);
++    });
++
++    function updateCountdown() {
++      const now = new Date();
++      let nextIndex = -1;
++      let nextTime;
++      for (let i = 0; i < prayers.length; i++) {
++        if (now < prayers[i].time) {
++          nextIndex = i;
++          nextTime = prayers[i].time;
++          break;
++        }
++      }
++      if (nextIndex === -1) {
++        nextIndex = 0;
++        nextTime = new Date(prayers[0].time.getTime() + 86400000);
++      }
++
++      prayerEls.forEach(el => el.classList.remove('active'));
++      prayerEls[nextIndex].classList.add('active');
++
++      const diff = nextTime - now;
++      const hrs = Math.floor(diff / 3600000);
++      const mins = Math.floor((diff % 3600000) / 60000);
++      const secs = Math.floor((diff % 60000) / 1000);
++      const fmt = `${String(hrs).padStart(2,'0')}:${String(mins).padStart(2,'0')}:${String(secs).padStart(2,'0')}`;
++      countdown.textContent = `Next: ${prayers[nextIndex].name} in ${fmt}`;
++    }
++
++    setInterval(updateCountdown, 1000);
++    updateCountdown();
++
+     function drawClock() {
+       const now = new Date();
+       const sec = now.getSeconds();
+       const min = now.getMinutes();
+       const hr = now.getHours();
+ 
+       ctx.clearRect(0, 0, 180, 180);
+       ctx.beginPath();
+       ctx.arc(90, 90, 88, 0, 2 * Math.PI);
+       ctx.fillStyle = "#000";
+       ctx.fill();
+       ctx.strokeStyle = "#00ffcc";
+       ctx.lineWidth = 4;
+       ctx.stroke();
+ 
+       ctx.beginPath();
+       ctx.moveTo(90, 90);
+       const hourAngle = ((Math.PI / 6) * hr) + ((Math.PI / 360) * min);
+       ctx.lineTo(90 + 40 * Math.cos(hourAngle - Math.PI / 2), 90 + 40 * Math.sin(hourAngle - Math.PI / 2));
+       ctx.strokeStyle = "#fff";
+       ctx.lineWidth = 6;
+       ctx.stroke();
+ 
+       ctx.beginPath();
+       ctx.moveTo(90, 90);
+       const minAngle = (Math.PI / 30) * min;
+       ctx.lineTo(90 + 60 * Math.cos(minAngle - Math.PI / 2), 90 + 60 * Math.sin(minAngle - Math.PI / 2));
+       ctx.lineWidth = 4;
+       ctx.stroke();
+ 
+       ctx.beginPath();
+       ctx.moveTo(90, 90);
+       const secAngle = (Math.PI / 30) * sec;
+       ctx.lineTo(90 + 70 * Math.cos(secAngle - Math.PI / 2), 90 + 70 * Math.sin(secAngle - Math.PI / 2));
+       ctx.strokeStyle = "#00ffcc";
+       ctx.lineWidth = 2;
+       ctx.stroke();
+     }
+ 
+     setInterval(drawClock, 1000);
+     drawClock();
+   </script>
+ </body>
+-</html>
++</html>
+ 
+EOF
+)
